--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 license = { file = "LICENSE.md" }
 requires-python = ">=3.9"
 dependencies = [
+    "cffi (>=1.17.1,<2.0.0)"
 ]
 
 [project.urls]
