--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.1.0"
 description = "A FortiGate configuration parser."
 authors = [{name = "Ariel Otilibili", email = "<otilibil@eurecom.fr>"}]
 readme = "README.md"
-license = { file = "LICENSE.md" }
+license = "Apache-2.0"
+license-files = ["LICENSE.md"]
 requires-python = ">=3.9"
 dependencies = [
 ]
