--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ license = "Apache-2.0"
 license-files = ["LICENSE.md"]
 requires-python = ">=3.9"
 dependencies = [
+    "ruff (>=0.13.1,<0.14.0)",
+    "cffi (>=2.0.0,<3.0.0)"
 ]
 
 [project.urls]
